--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language: java
 env:
   global:
     - MAVEN_OPTS="-Xmx512m"
+    - DISPLAY=:99.0
   matrix:
     - ECLIPSE_RELEASE=""
     - ECLIPSE_RELEASE="-Declipse-release=juno"
@@ -18,5 +19,16 @@ jdk: oraclejdk8
 cache:
   directories:
   - $HOME/.m2
+
+install: true
+
+addons:
+  apt:
+    packages:
+    - metacity
+
+before_script:
+ - sh -e /etc/init.d/xvfb start
+ - metacity --sm-disable --replace 2> metacity.err &
 
 script: mvn clean verify -f ch.acanda.eclipse.pmd/pom.xml -B -PskipSWTBot $ECLIPSE_RELEASE
