--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -301,7 +301,7 @@
                 <repository>
                     <id>neon</id>
                     <layout>p2</layout>
-                    <url>http://download.eclipse.org/eclipse/updates/4.6milestones/S-4.6M4-201512092300</url>
+                    <url>http://download.eclipse.org/releases/neon/</url>
                 </repository>
                 <repository>
                     <id>swtbot</id>
